--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
     <style>
         body {
-            background: url('http://www.pngimagesfree.com/LOGO/Z/Zomato/Zomato-Logo-PNG-HD-Transparent.png') no-repeat;
+/*             background: url('http://www.pngimagesfree.com/LOGO/Z/Zomato/Zomato-Logo-PNG-HD-Transparent.png') no-repeat; */
             background-size: 20%;
             background-color: #d84040;
 
@@ -88,6 +88,7 @@
 
 
     <div class="container">
+         <img src="http://www.pngimagesfree.com/LOGO/Z/Zomato/Zomato-Logo-PNG-HD-Transparent.png" style="width: 15%;height: 10%;" alt="" srcset="">
 
         <div class="row" style="text-align: center;">
 
